--- a/1/WebPagesEN/tmScripts/styles.html
+++ b/1/WebPagesEN/tmScripts/styles.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="tmGifs/normalize.css" type="text/css">
-<link rel="stylesheet" href="tmGifs/styleButtons.css" type="text/css">
-<link rel="stylesheet" href="tmGifs/stylePages.css" type="text/css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+<script type="text/javascript" url="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
