Event list and event detail cleanup.

--- a/1/WebPagesEN/tmCustom/TMtickets.html
+++ b/1/WebPagesEN/tmCustom/TMtickets.html
@@ -78,6 +78,13 @@
       </div><!-- /panel-body -->
     </div> <!-- /panel -->
 
+    <div class="bs-callout bs-callout-warning">
+      <h4>Ticket discounts are not available online.</h4>
+      <p>If you would like to take advantage of any discounts,
+      please call the Ticket Office toll-free at 800-PLAYTIX (800-752-9849).</p>
+
+      <p><small>All times are Mountain Time.</small></p>
+    </div>
 
     <small class="text-muted"><field>F_HTML_PAGE_MESSAGE</field></small>
 
@@ -88,7 +95,7 @@
       <span class="label label-warning">Limited</span>
       <span class="label label-danger">Sold out</span>
     </div>
-    <div class="clearfix"></div>
+    <div class="clearfix add-border-bottom"></div>
     <field>F_HTML_PERFORMANCE_LIST</field>
     <!-- END restructured event list -->
 
