--- a/1/WebPagesEN/tmCustom/tmEvent/tmEventDefault.html
+++ b/1/WebPagesEN/tmCustom/tmEvent/tmEventDefault.html
@@ -17,58 +17,48 @@
     <h1><field>P_PLAY_TITLE</field></h1>
   </div>
 
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-responsive" src="http://placehold.it/350x250">
+      <img class="img-responsive" src="<field>F_HTML_IMAGE_EBLAST_SERVER</field>event<field>P_SEQ</field>.jpg" align="absmiddle">
+    </div>
+    <div class="col-md-8">
+      
+      <h3>When</h3>
+      <p>
+        <field>pick(P_PERFORMANCES=1,'Runs from','Occurs on')</field>
+        <field>cap(dat(P_SHOW_FIRST,'w n D y'))</field>
+        <field>pick(P_PERFORMANCES=1,con('to ',cap(dat(P_SHOW_LAST,'w n D y'))))</field>
+      </p>
+
+      <h3>Venue</h3>
+      <p>
+        <strong><field>VE_NAME</field></strong><br>
+        <field>VE_ADDRESS1</field><br>
+        <field>pick(len(VE_ADDRESS2)=0,con(VE_ADDRESS2,'<br>'))</field>
+        <field>VE_CITY</field> <field>VE_PROVINCE</field> <field>VE_POSTAL_CODE</field>
+      </p>
+
+      <h3><field>D_PERF_DESC</field> Notes</h3>
+      <p>
+        <field>P_SALES_NOTES</field>
+      </p>
+
+      <p class="text-muted">Approximate running time: <field>P_PLAY_DURATION</field> minutes</p>
+
+      <FORM ACTION="<field>F_HTML_FIREWALL</field>online" METHOD=POST>
+        <input type=hidden name="P_SEQ" value="<field>P_SEQ</field>">
+        <input name="btnLoginFromDetail" type=submit id="btnLoginFromDetailPage" value="Buy Tickets To This Event"
+                    class="btn btn-default btn-lg">
+      </FORM>
+
+    </div>
+  </div>
 
 
-  <table width="90%" border="0" cellspacing="0" cellpadding="0">
-    <tr> 
-      <td><br>
-            <table width="100%" border="0" cellpadding="0" class=tablerowdetail>
-              <tr class=tablerowheader>
-                <td align="center"><b><field>P_PLAY_TITLE</field></b></td>
-              </tr>
-              <tr>
-                <td align="center">
-				<field>pick(P_PERFORMANCES=1,'runs from','occurs on')</field>
-              <field>cap(dat(P_SHOW_FIRST,'w n D y'))</field>
-            <field>pick(P_PERFORMANCES=1,con('to ',cap(dat(P_SHOW_LAST,'w n D y'))))</field>
-			 in the<br>
-           <field>VE_NAME</field><br><field>VE_ADDRESS1</field><br>
-           <field>pick(len(VE_ADDRESS2)=0,con(VE_ADDRESS2,'<br>'))</field>
-           <field>VE_CITY</field> <field>VE_PROVINCE</field> <field>VE_POSTAL_CODE</field>
-                <br>
-                <br>
-            Approximate running time: <field>P_PLAY_DURATION</field> minutes</td>
-              </tr>
-              <tr class="tablerowheader">
-                <td align="center">
-                <strong><field>D_PERF_DESC</field> Notes</strong><br></td>
-              </tr>
-              <tr>
-                <td>
-                <table border=0 width="100%" class="tablerowdetail">
-                <tr>
-                <td align="left"><field>P_SALES_NOTES</field>
-                </td>
-                <td align="center">
-                <img src="<field>F_HTML_IMAGE_EBLAST_SERVER</field>event<field>P_SEQ</field>.jpg" align="absmiddle">
-                </td>
-                </tr>
-                </table></td>
-              </tr>
-              <tr class=tablerowheader>
-                <td align=center>
-                <FORM ACTION="<field>F_HTML_FIREWALL</field>online" METHOD=POST>
-					<input type=hidden name="P_SEQ" value="<field>P_SEQ</field>">
-					<input name="btnLoginFromDetail" type=submit id="btnLoginFromDetailPage" value="Buy Tickets To This Event"
-                    	class="new" onMouseOver="pviiClassNew(this,'newover')" onMouseOut="pviiClassNew(this,'new')" >
-                </FORM>
-                </td>
-              </tr>
-            </table>
-      </td>
-    </tr>
-  </table>
-</div>
+
+  
+</div><!-- /#content -->
 </div><!-- /.container -->
 <!--#include virtual="TMtemplates/tmFooter.html" -->
 </BODY>
