Mandatory changes from version 10.

--- a/1/WebPagesEN/tmCustom/tmEvent/tmEventDefault.html
+++ b/1/WebPagesEN/tmCustom/tmEvent/tmEventDefault.html
@@ -16,8 +16,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <img class="img-responsive" src="http://placehold.it/350x250">
-      <img class="img-responsive" src="<field>F_HTML_IMAGE_EBLAST_SERVER</field>event<field>P_SEQ</field>.jpg" align="absmiddle">
+      <img class="img-responsive" src="<field>F_HTML_FIREWALL</field>picture?id=<field>PP_SEQ</field>">
     </div>
     <div class="col-md-8">
       <div class="page-header">
