--- a/1/WebPagesEN/tmCustom/TMpass.html
+++ b/1/WebPagesEN/tmCustom/TMpass.html
@@ -63,6 +63,9 @@
         <!--#include virtual="TMtemplates/pleaseWaitMessage.html" -->
         <input name="btnReservePass" type=submit value="Add to Shopping Cart" class="btn btn-default" onClick="process()">&nbsp;
         <input name="<field>pick(F_LOGGED_IN=2,'btnHome','btnGetEventList')</field>" type=submit value="Cancel Purchase" class="btn btn-default">
+        <field>pick(D_ENABLE_INTERNET_PASS_REDEMPTION=1,'<!-- comment: only show if enabled to redeem passes','')</field>
+                Check the balance remaining on an existing Pass or Gift Certificate <input name="btnPassCheckBalance" type=submit value="Check Pass Values" class="btn btn-default">&nbsp;
+              <field>pick(D_ENABLE_INTERNET_PASS_REDEMPTION=1,'-->','')</field>
       </form>
     </div>
   </div>
