--- a/1/WebPagesEN/tmCustom/TMpasswordForgot.html
+++ b/1/WebPagesEN/tmCustom/TMpasswordForgot.html
@@ -29,14 +29,19 @@
         <INPUT TYPE=hidden NAME=emptyfield VALUE="Email ID" SIZE=8 readonly="true">
         <div class="form-group">
           <label for="e">Email</label>
-          <INPUT class="form-control" id="e" NAME=e TYPE=text tabindex="1" VALUE="<field>F_EMAIL_ADDRESS</field>">
+          <INPUT class="form-control" id="e" NAME=e TYPE=text tabindex="1" VALUE="<field>F_EMAIL_ADDRESS</field>" SIZE=30>
           <p class="help-block">
-            Enter your e-mail address and we'll immediately
-              e-mail your password back to that email address.
+            Please enter your e-mail address in to the field below.  We will immediately
+              <b>send instructions back to this email address</b>.  These instructions describe how you can
+              reset your password, after which you can login. 
+          </p>
+          <p>
+              During that time, your account will be locked until you complete the process of resetting your
+              password.  This is for your safety when using using our online sales.
           </p>
         </div>
         <input type=hidden name=param value="<field>F_HTML_PARAMETER</field>">
-        <input name="btnPasswordSend" type=submit value="Email me my Password" class="btn btn-default">
+        <input name="btnPasswordSend" type=submit value="Reset PW and Email Instructions" class="btn btn-default">
         <input name="btnLogin" type=submit value="Return to Sign On Screen" class="btn btn-default">
       </form>
 
