--- a/1/WebPagesEN/tmCustom/tmVenue/tmVenueDefault.html
+++ b/1/WebPagesEN/tmCustom/tmVenue/tmVenueDefault.html
@@ -17,8 +17,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <img class="img-responsive" src="http://placehold.it/350x250">
-      <img src="<field>F_HTML_SEATMAP</field>" border="0">
+      <img class="img-responsive" src="<field>F_HTML_SEATMAP</field>">
     </div>
     <div class="col-md-8">
       
